fixed scroll issues and scrollbar

--- a/src/components/appbar/appbar.css
+++ b/src/components/appbar/appbar.css
@@ -5,7 +5,6 @@
   background-color: #343d46;
   justify-content: space-between;
   box-shadow: 0 1px 10px 5px rgb(0 0 0 / 10%);
-  padding: 0px 5px;
   height: 50px;
   width: 100%;
 }
