--- a/src/components/column-holder/columnHolder.css
+++ b/src/components/column-holder/columnHolder.css
@@ -4,7 +4,7 @@
 }
 
 .column-holder {
-  height: 100%;
+  height: calc( 100vh - 150px);
   display: flex;
   column-gap: 10px;
   margin: 0px 10px;
